# cpp

./: .gitignore
cmake/00/: 00.cpp  CMakeLists.txt
cmake/01/: 01.cpp  01.h.in  CMakeLists.txt
cpp20/00/: CMakeLists.txt  main  main.cpp
cpp20/01/: CMakeLists.txt  main  main.cpp
opencv/00-OpenCV/: CMakeLists.txt  main.cpp
qt/00-GL/: CMakeLists.txt  main.cpp
qt/00-GL/qrc/: basic.frag  basic.vert  color.fsh  shaders.qrc
qt/00-GL/src/: geometrydraw.cpp  geometrydraw.h  windowgl.cpp  windowgl.h
qt/01-Entity/: CMakeLists.txt  main.cpp
qt/01-Entity/Entity/: CMakeLists.txt  entity.cpp  entity.h  main.cpp
qt/01-Entity/qrc/: basic.vert  cube.frag  pyramid.vert  shaders.qrc
qt/01-Entity/src/: entity.cpp  entity.h  geometrydraw.cpp  geometrydraw.h  physics.h  windowgl.cpp  windowgl.h
qt/02-Component/: CMakeLists.txt  main.cpp
qt/02-Component/qrc/: cube.vert  pyramid.frag
qt/02-Component/src/: entity.h  geometrydraw.cpp  geometrydraw.h  physics.cpp  physics.h  windowgl.cpp  windowgl.h
scratch/Scratch/: CMakeLists.txt  main.cpp
