cmake_minimum_required(VERSION 3.14)

project(Entity LANGUAGES CXX)

set(CMAKE_INCLUDE_CURRENT_DIR ON)

set(CMAKE_AUTOUIC ON)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

find_package(QT NAMES Qt6 Qt5 COMPONENTS Core REQUIRED)
find_package(Qt${QT_VERSION_MAJOR} COMPONENTS Core REQUIRED)

set(
    SOURCES
    main.cpp
    entity.h
    entity.cpp
)

add_executable(Entity
  ${SOURCES}
)


target_link_libraries(Entity Qt${QT_VERSION_MAJOR}::Core)
